--- a/.doom.d/config.org
+++ b/.doom.d/config.org
@@ -1,9 +1,9 @@
 #+title: Doom Emacs Config
+#+description: Personal config.org for Doom Emacs (v2.0.9)
 #+author: Mark Bojack
 #+email: markbojack.si@gmail.com
 #+date: @@html:<!--@@{{{git-rev}}}@@html:-->@@@@latex:\\\large\bfseries@@ {{{modification-time(%y-%m-%d, t)}}} @@latex:\\\normalsize\mdseries@@{{{modification-time(%h:%m, t)}}} @@latex:\acr{\lowercase{@@{{{timezone}}}@@latex:}}\iffalse@@, {{{git-rev}}}@@latex:\fi@@
 #+macro: timezone (eval (substring (shell-command-to-string "date +%z") 0 -1))
-#+description: personal config.org document for doom emacs (v2.0.9)
 #+startup: overview
 #+property: header-args:emacs-lisp :tangle yes :comments link
 #+property: header-args:shell :tangle "setup.sh"
@@ -372,6 +372,11 @@ I'm still experimenting with the ess variables; [[https://stackoverflow.com/ques
 (display-time-mode 1)                             ; Enable time in the mode-line
 (unless (string-match-p "^Power N/A" (battery))   ; On laptops...
   (display-battery-mode 1))                       ; it's nice to know how much power you have
+
+;; Org mode: Replace list hyphen with dot
+(font-lock-add-keywords 'org-mode
+                        '(("^ *\\([-]\\) "
+                          (0 (prog1 () (compose-region (match-beginning 1) (match-end 1) "•"))))))
 #+end_src
 
 * Font
@@ -390,7 +395,7 @@ I can't customize doom-big-font 😭
 #+begin_src emacs-lisp
 (setq doom-font (font-spec :family "RobotoMono Nerd Font" :size 10 :weight 'bold)
       ;; doom-big-font (font-spec :family "RobotoMono Nerd Font" :size 14))
-      doom-variable-pitch-font (font-spec :family "sans" :size 13))
+      doom-variable-pitch-font (font-spec :family "RobotoMono Nerd Font" :size 10)) ; :family originally sans
 
 (after! doom-themes
   (setq doom-themes-enable-bold t
@@ -431,11 +436,12 @@ Mostly from [[https://github.com/zaiste/][Jakub Neander]].
 ** =ess/R= :TODO:
 
 TODO: some alternatives (deprecated?) if scroll-down-aggressively is bad
+  - https://emacs.stackexchange.com/questions/41242/how-to-autoscroll-a-window-to-always-show-the-end-of-a-growing-buffer
+  - https://stackoverflow.com/questions/2710442/in-ess-emacs-how-can-i-get-the-r-process-buffer-to-scroll-to-the-bottom-after-a
   (setq comint-prompt-read-only t)
   (setq comint-scroll-to-bottom-on-input t)
   (setq comint-scroll-to-bottom-on-output t)
   (setq comint-move-point-for-output t)
-
 
 
 
@@ -462,16 +468,17 @@ In order to export to an HTML document with =C-c C-e h h=, you need this header 
 
 ** =mu4e= :TODO:
 TODO: auto run mu4e-update-index at start
+TODO: if you ever do need to reindex: rm -rfv ~/.mu, mu index
 
 Some quick notes:
-- ~mu4e-index-update-in-background~ is needed for Gmail to work
 - I take advantage of the ~-c~ flag for ~mbsync~ because I also have =neomutt= installed
 - ~mu4e-index-update-error-warning nil~ is needed if your =~/.mbsyncrc= contains the follwing line of code (I just use =pass=, so I don't need this): ~PassCmd "gpg2 -q --for-your-eyes-only --no-tty -d ~/.password-store/your@gmail.com.gpg'~
 
 #+begin_src emacs-lisp
 (add-to-list 'load-path "/usr/share/emacs/site-lisp/mu4e/")
 
-(setq mu4e-index-update-in-background t
+(setq mu4e-change-filenames-when-moving t       ; avoids mail syncing issues with mbsync
+      mu4e-index-update-in-background t         ; needed for gmail to work
       mu4e-get-mail-command "mbsync -a -c ~/p-dot-script/.mbsyncrc"
       mu4e-update-interval (* 1 60)
       mu4e-attachment-dir "~/Downloads"
@@ -490,6 +497,8 @@ Some quick notes:
       mu4e-bookmarks
       '((:name "Family" :query "from:Bojack" :key ?f :hide t)
         (:name "Today's messages" :query "date:today..now" :key ?t :hide nil)))
+
+(add-hook! 'mu4e-main-mode-hook (mu4e-update-index))    ; custom hook bc mu4e doesn't do it at start
 #+end_src
 
 ** =smtpmail=
@@ -508,7 +517,6 @@ This code block is essential to getting Gmail to work with =mu4e=.
 
 TODO: is this an alternative to org-agenda-files or is it deprecated?
 (setq +org-capture-todo-file "tasks.org")
-TODO: see if fancy priorities work else see zaiste vid
 
 #+begin_src emacs-lisp
 (setq org-directory "~/Documents/org/"
@@ -520,11 +528,12 @@ TODO: see if fancy priorities work else see zaiste vid
       ;; showall          no folding of any entries
       ;; showeverything   show even drawer contents
       org-startup-folded t
-      org-link-search-must-match-exact-headline nil     ;; target words with a link
+      org-link-search-must-match-exact-headline nil     ; target words with a link
       org-highest-priority ?A
       org-default-priority ?B
-      org-lowest-priority ?C                            ;; does this really have to be ?E by default?
-      org-ellipsis " ▾ "
+      org-lowest-priority ?C                            ; does this really have to be ?E by default?
+      ;; org-hide-emphasis-markers t                    ; hides the characters added (ie * / _ ~ =) to emphasize text
+      org-ellipsis " ▾"
       org-bullets-bullet-list '("·")
       org-tags-column -80
       org-agenda-files (ignore-errors (directory-files +org-dir t "\\.org$" t))
@@ -595,28 +604,6 @@ TODO: see if fancy priorities work else see zaiste vid
                       :weight 'bold))
 #+end_src
 
-** =org-super-agenda= :TODO:
-TODO see if this works; if not, review zaiste video
-Check out this package on [[https://github.com/alphapapa/org-super-agenda][Github]] for lots more info.
-
-#+begin_src emacs-lisp
-(after! org-agenda
-  (setq org-super-agenda-mode t
-        org-super-agenda-groups '((:name "Today"
-                                   :time-grid t
-                                   :scheduled today)
-                                  (:name "Due today"
-                                   :deadline today)
-                                  (:name "Important"
-                                   :priority "A")
-                                  (:name "Overdue"
-                                   :deadline past)
-                                  (:name "Due soon"
-                                   :deadline future)
-                                  (:name "Big Outcomes"
-                                   :tag "bo"))))
-#+end_src
-
 ** =org-brain=
 Check out the [[https://github.com/Kungsgeten/org-brain][Github]].
 
@@ -640,6 +627,37 @@ Check out the [[https://github.com/Kungsgeten/org-brain][Github]].
   (setq org-brain-include-file-entries nil
         org-brain-file-entries-use-title nil))
 #+end_src
+
+** =org-bullets=
+#+begin_src emacs-lisp
+(use-package org-bullets
+  :hook (org-mode . org-bullets-mode)
+  :config
+  (setq org-bullets-bullet-list '("◉" "⁑" "⁂" "❖" "✮" "✱" "✸")))
+#+end_src
+
+** =org-super-agenda= :TODO:
+TODO see if this works; if not, review zaiste video
+Check out this package on [[https://github.com/alphapapa/org-super-agenda][Github]] for lots more info.
+
+#+begin_src emacs-lisp
+(after! org-agenda
+  (setq org-super-agenda-mode t
+        org-super-agenda-groups '((:name "Today"
+                                   :time-grid t
+                                   :scheduled today)
+                                  (:name "Due today"
+                                   :deadline today)
+                                  (:name "Important"
+                                   :priority "A")
+                                  (:name "Overdue"
+                                   :deadline past)
+                                  (:name "Due soon"
+                                   :deadline future)
+                                  (:name "Big Outcomes"
+                                   :tag "bo"))))
+#+end_src
+
 * Personal Information
 #+begin_src emacs-lisp
 (setq user-full-name "Mark Bojack"
@@ -651,6 +669,7 @@ Check out the [[https://github.com/Kungsgeten/org-brain][Github]].
 - [[https://github.com/daviwil][David Wilson]]
 - [[https://gitlab.com/dwt1][Derek Taylor]]
 - [[https://discord.com/channels/406534637242810369/579041038669447178][Discord]]
+- [[https://github.com/hlissner/doom-emacs/blob/develop/docs/getting_started.org][Getting Started Guide]]
 - [[https://github.com/hlissner][Henrik Lissner]]
 - [[https://github.com/zaiste/][Jakub Neander]]
 - [[https://github.com/jwiegley/dot-emacs/][John Wiegley]]
