--- a/.doom.d/config.org
+++ b/.doom.d/config.org
@@ -322,9 +322,9 @@ Selected variable settings from [[https://github.com/angrybacon/dotemacs][Mathie
 
 #+begin_src emacs-lisp
 (setq-default cursor-in-non-selected-windows nil        ; hide the cursor in inactive windows
-              custom-unlispify-menu-entries nil         ; prefer kebab-case for titles
-              custom-unlispify-tag-names nil            ; prefer kebab-case for symbols
-              delete-by-moving-to-trash t               ; delete files to trash
+                        custom-unlispify-menu-entries nil         ; prefer kebab-case for titles
+                        custom-unlispify-tag-names nil            ; prefer kebab-case for symbols
+                                delete-by-moving-to-trash t               ; delete files to trash
               fill-column 80                            ; set width for automatic line breaks
               help-window-select t                      ; focus new help windows when opened
               initial-scratch-message ""                ; empty the initial *scratch* buffer
@@ -347,7 +347,9 @@ I'm still experimenting with the ess variables; [[https://stackoverflow.com/ques
 
 #+begin_src emacs-lisp
 (setq doom-theme 'doom-one
-      display-line-numbers-type 'relative
+      ;; display-line-numbers-type 'relative
+      display-line-numbers-type nil
+      mixed-pitch-set-height t                  ; let's you set the :size for variable-pitch-font
       evil-split-window-below t
       evil-vsplit-window-right t
       gc-cons-threshold (* 8 1024 1024)
@@ -372,11 +374,6 @@ I'm still experimenting with the ess variables; [[https://stackoverflow.com/ques
 (display-time-mode 1)                             ; Enable time in the mode-line
 (unless (string-match-p "^Power N/A" (battery))   ; On laptops...
   (display-battery-mode 1))                       ; it's nice to know how much power you have
-
-;; Org mode: Replace list hyphen with dot
-(font-lock-add-keywords 'org-mode
-                        '(("^ *\\([-]\\) "
-                          (0 (prog1 () (compose-region (match-beginning 1) (match-end 1) "•"))))))
 #+end_src
 
 * Font
@@ -393,9 +390,9 @@ From [[https://gitlab.com/dwt1][Derek Taylor's]] config:
 I can't customize doom-big-font 😭
 
 #+begin_src emacs-lisp
-(setq doom-font (font-spec :family "RobotoMono Nerd Font" :size 10 :weight 'bold)
-      ;; doom-big-font (font-spec :family "RobotoMono Nerd Font" :size 14))
-      doom-variable-pitch-font (font-spec :family "RobotoMono Nerd Font" :size 10)) ; :family originally sans
+(setq doom-font (font-spec :family "RobotoMono Nerd Font" :size 10)                     ; flavor of the month
+      ;; doom-font (font-spec :family "RobotoMono Nerd Font" :size 10 :weight 'bold)    ; go-to
+      doom-variable-pitch-font (font-spec :family "SF Pro Text" :size 11))              ; :family originally sans
 
 (after! doom-themes
   (setq doom-themes-enable-bold t
@@ -433,7 +430,7 @@ Mostly from [[https://github.com/zaiste/][Jakub Neander]].
 #+end_src
 
 * Packages
-** =ess/R= :TODO:
+** ess/R :TODO:
 
 TODO: some alternatives (deprecated?) if scroll-down-aggressively is bad
   - https://emacs.stackexchange.com/questions/41242/how-to-autoscroll-a-window-to-always-show-the-end-of-a-growing-buffer
@@ -466,7 +463,7 @@ In order to export to an HTML document with =C-c C-e h h=, you need this header 
 (setq scroll-down-aggressively 0.01)
 #+end_src
 
-** =mu4e= :TODO:
+** mu4e :TODO:
 TODO: auto run mu4e-update-index at start
 TODO: if you ever do need to reindex: rm -rfv ~/.mu, mu index
 
@@ -501,38 +498,35 @@ Some quick notes:
 (add-hook! 'mu4e-main-mode-hook (mu4e-update-index))    ; custom hook bc mu4e doesn't do it at start
 #+end_src
 
-** =smtpmail=
-This code block is essential to getting Gmail to work with =mu4e=.
-
-#+begin_src emacs-lisp
-(setq starttls-use-gnutls t
-      smtpmail-starttls-credentials '(("smtp.gmail.com" 587 nil nil))
-      smtpmail-auth-credentials '(("smtp.gmail.com" 587 "markbojack.si@gmail.com" nil))
-      smtpmail-default-smtp-server "smtp.gmail.com"
-      smtpmail-smtp-server "smtp.gmail.com"
-      smtpmail-smtp-service 587)
-#+end_src
-
-** =org= :TODO:
-
+** org :TODO:
+*** org-mode
 TODO: is this an alternative to org-agenda-files or is it deprecated?
 (setq +org-capture-todo-file "tasks.org")
+TODO: document title height below doesn't work
 
 #+begin_src emacs-lisp
-(setq org-directory "~/Documents/org/"
+;; Replace list hyphens with dots
+(font-lock-add-keywords 'org-mode
+                        '(("^ *\\([-]\\) "
+                          (0 (prog1 () (compose-region (match-beginning 1) (match-end 1) "•"))))))
+
+(setq org-directory "~/Documents"
 
       ;; org-agenda-files (directory-files-recursively "~/Documents/org/" "\.org$")  ;; make everything an agenda file
-      org-agenda-files '("~/Documents/org/remind.org")
-      ;; overview         top-level headlines only
-      ;; content          all headlines
-      ;; showall          no folding of any entries
-      ;; showeverything   show even drawer contents
+      org-agenda-files '("~/Documents/remind.org")
+
+      ;; For FOLDS:
+        ;; overview         top-level headlines only
+        ;; content          all headlines
+        ;; showall          no folding of any entries
+        ;; showeverything   show even drawer contents
       org-startup-folded t
+
       org-link-search-must-match-exact-headline nil     ; target words with a link
       org-highest-priority ?A
       org-default-priority ?B
       org-lowest-priority ?C                            ; does this really have to be ?E by default?
-      ;; org-hide-emphasis-markers t                    ; hides the characters added (ie * / _ ~ =) to emphasize text
+      org-hide-emphasis-markers t                    ; hides the characters added (ie * / _ ~ =) to emphasize text
       org-ellipsis " ▾"
       org-bullets-bullet-list '("·")
       org-tags-column -80
@@ -555,10 +549,17 @@ TODO: is this an alternative to org-agenda-files or is it deprecated?
 ;; (setq org-fancy-priorities-list '("⚡" "⬆" "⬇" "☕"))
 (setq org-fancy-priorities-list '("" "" ""))
 
-;; (add-hook! 'org-mode-hook #'+org-pretty-mode #'mixed-pitch-mode)  ;;  i don't like this
+(add-hook! 'org-mode-hook #'+org-pretty-mode #'mixed-pitch-mode)  ;  i don't like this
 (add-hook! 'org-mode-hook (company-mode -1))
 (add-hook! 'org-capture-mode-hook (company-mode -1))
 (add-hook! 'org-mode-hook (org-fancy-priorities-mode))
+
+;; this is to get a zen-mode like appearance by default
+(defun org-mode-visual-fill ()
+  (setq visual-fill-column-width 140
+        visual-fill-column-center-text t)
+  (visual-fill-column-mode 1))
+(add-hook! 'org-mode-hook (org-mode-visual-fill))
 
 (set-popup-rule! "^\\*Org Agenda" :side 'bottom :size 0.90 :select t :ttl nil)
 (set-popup-rule! "^CAPTURE.*\\.org$" :side 'bottom :size 0.90 :select t :ttl nil)
@@ -576,7 +577,7 @@ TODO: is this an alternative to org-agenda-files or is it deprecated?
   (set-face-attribute 'org-level-1 nil
                       :foreground "steelblue2"
                       :background nil
-                      :height 1.2
+                      :height 1.0
                       :weight 'bold)
   (set-face-attribute 'org-level-2 nil
                       :foreground "slategray2"
@@ -600,11 +601,11 @@ TODO: is this an alternative to org-agenda-files or is it deprecated?
   (set-face-attribute 'org-document-title nil
                       :foreground "SlateGray1"
                       :background nil
-                      :height 1.75
+                      :height 1.2
                       :weight 'bold))
 #+end_src
 
-** =org-brain=
+*** org-brain
 Check out the [[https://github.com/Kungsgeten/org-brain][Github]].
 
 #+begin_src emacs-lisp
@@ -628,7 +629,7 @@ Check out the [[https://github.com/Kungsgeten/org-brain][Github]].
         org-brain-file-entries-use-title nil))
 #+end_src
 
-** =org-bullets=
+*** org-bullets
 #+begin_src emacs-lisp
 (use-package org-bullets
   :hook (org-mode . org-bullets-mode)
@@ -636,7 +637,7 @@ Check out the [[https://github.com/Kungsgeten/org-brain][Github]].
   (setq org-bullets-bullet-list '("◉" "⁑" "⁂" "❖" "✮" "✱" "✸")))
 #+end_src
 
-** =org-super-agenda= :TODO:
+*** org-super-agenda :TODO:
 TODO see if this works; if not, review zaiste video
 Check out this package on [[https://github.com/alphapapa/org-super-agenda][Github]] for lots more info.
 
@@ -656,6 +657,18 @@ Check out this package on [[https://github.com/alphapapa/org-super-agenda][Githu
                                    :deadline future)
                                   (:name "Big Outcomes"
                                    :tag "bo"))))
+#+end_src
+
+** smtpmail
+This code block is essential to getting Gmail to work with =mu4e=.
+
+#+begin_src emacs-lisp
+(setq starttls-use-gnutls t
+      smtpmail-starttls-credentials '(("smtp.gmail.com" 587 nil nil))
+      smtpmail-auth-credentials '(("smtp.gmail.com" 587 "markbojack.si@gmail.com" nil))
+      smtpmail-default-smtp-server "smtp.gmail.com"
+      smtpmail-smtp-server "smtp.gmail.com"
+      smtpmail-smtp-service 587)
 #+end_src
 
 * Personal Information
@@ -691,3 +704,4 @@ Thanks [[https://www.reddit.com/r/emacs/comments/mr3urh/disable_spellfumode_in_d
 (remove-hook 'text-mode-hook #'spell-fu-mode)
 (add-hook 'markdown-mode-hook #'spell-fu-mode)
 #+end_src
+
