--- a/.doom.d/config.org
+++ b/.doom.d/config.org
@@ -322,9 +322,9 @@ Selected variable settings from [[https://github.com/angrybacon/dotemacs][Mathie
 
 #+begin_src emacs-lisp
 (setq-default cursor-in-non-selected-windows nil        ; hide the cursor in inactive windows
-                        custom-unlispify-menu-entries nil         ; prefer kebab-case for titles
-                        custom-unlispify-tag-names nil            ; prefer kebab-case for symbols
-                                delete-by-moving-to-trash t               ; delete files to trash
+              custom-unlispify-menu-entries nil         ; prefer kebab-case for titles
+              custom-unlispify-tag-names nil            ; prefer kebab-case for symbols
+              delete-by-moving-to-trash t               ; delete files to trash
               fill-column 140                           ; set width for automatic line breaks
               help-window-select t                      ; focus new help windows when opened
               initial-scratch-message ""                ; empty the initial *scratch* buffer
@@ -349,9 +349,9 @@ I'm still experimenting with the ess variables; [[https://stackoverflow.com/ques
 (setq doom-theme 'doom-one
       ;; display-line-numbers-type 'relative
       display-line-numbers-type nil
-      mixed-pitch-set-height t                  ; let's you set the :size for variable-pitch-font
       evil-split-window-below t
       evil-vsplit-window-right t
+      mixed-pitch-set-height t                  ; let's you set the :size for variable-pitch-font
       gc-cons-threshold (* 8 1024 1024)
       auto-save-default t
       make-backup-files t
@@ -366,14 +366,11 @@ I'm still experimenting with the ess variables; [[https://stackoverflow.com/ques
 ** Miscellaneous
 #+begin_src emacs-lisp
 (fset 'yes-or-no-p 'y-or-n-p)           ; Replace yes/no prompts with y/n
-(global-subword-mode t)                 ; Iterate through CamelCase words
 (mouse-avoidance-mode 'exile)           ; Avoid collision of mouse with point
-(put 'downcase-region 'disabled nil)    ; Enable downcase-region C-x C-l
-(put 'upcase-region 'disabled nil)      ; Enable upcase-region C-x C-u
-(set-default-coding-systems 'utf-8)     ; Default to utf-8 encoding
 (display-time-mode 1)                             ; Enable time in the mode-line
 (unless (string-match-p "^Power N/A" (battery))   ; On laptops...
   (display-battery-mode 1))                       ; it's nice to know how much power you have
+
 #+end_src
 
 * Font
@@ -713,3 +710,40 @@ Thanks [[https://www.reddit.com/r/emacs/comments/mr3urh/disable_spellfumode_in_d
 (add-hook 'markdown-mode-hook #'spell-fu-mode)
 #+end_src
 
+* Text Manipulation
+#+begin_src emacs-lisp
+(global-subword-mode t)                 ; Iterate through CamelCase words
+(put 'downcase-region 'disabled nil)    ; Enable downcase-region C-x C-l
+(put 'upcase-region 'disabled nil)      ; Enable upcase-region C-x C-u
+(set-default-coding-systems 'utf-8)     ; Default to utf-8 encoding
+#+end_src
+
+* EXPERIMENTAL
+#+begin_src emacs-lisp
+; random images on home screen
+;; (let ((alternatives '("doom-emacs-flugo-slant_out_purple-small.png")))
+;;    ;;((alternatives '("doom-emacs-color.png" "doom-emacs-bw-light.svg")))
+;;   (setq fancy-splash-image
+;;         (concat doom-private-dir "splash/"
+;;                 (nth (random (length alternatives)) alternatives))))
+
+; getting rid of item in the doom dashboard
+;; (setq +doom-dashboard-menu-sections (cl-subseq +doom-dashboard-menu-sections 0 2))
+
+; this goes with mixed-pitch-mode which evidently changes the cursor?
+(setq mixed-pitch-variable-pitch-cursor nil)
+
+; start fullscreen
+;; (add-to-list 'initial-frame-alist '(fullscreen . maximized))
+
+; truncates lines in ivy childframes
+;; (setq posframe-arghandler
+;;       (lambda (buffer-or-name key value)
+;;         (or (and (eq key :lines-truncate)
+;;                  (equal ivy-posframe-buffer
+;;                         (if (stringp buffer-or-name)
+;;                             buffer-or-name
+;;                           (buffer-name buffer-or-name)))
+;;                  t)
+;;             value)))
+#+end_src
